@@ -1,4 +1,4 @@
-name: Create Build
+name: Create Release
 
 on:
   push:
